--- a/videoSys/.classpath
+++ b/videoSys/.classpath
@@ -17,5 +17,8 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="C:/Users/Sang/Desktop/FPT_Poly/spring2022/kiemThuNangCao/junit/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Sang/Desktop/FPT_Poly/spring2022/kiemThuNangCao/junit/junit-4.13.2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
